--- a/ejercicio1-cursobootcamp.html
+++ b/ejercicio1-cursobootcamp.html
@@ -12,7 +12,7 @@
     <div>
         <ul>Mis videos favoritas de Youtube</ul>
             <li><a href="https://youtu.be/1aokooixKIo">Sparks - Coldplay</a></li>
-            <li><a href="https://youtu.be/qBoQzo98EpQ"></a>Heart To Heart - Mac DeMarco</li>
+            <li><a href="https://youtu.be/qBoQzo98EpQ">Heart To Heart - Mac DeMarco</a></li>
             <li><a href="https://youtu.be/7XmTuS6krwI">Resonance (Speed Up)</a></li>
     </div>
 </body>
