--- a/ejercicio1-cursobootcamp.html
+++ b/ejercicio1-cursobootcamp.html
@@ -10,10 +10,11 @@
     <p>Este es mi primer comentario de dos lineas</p>
     <p>Aprendiendo a documentar mi codigo con OpenBootcamp</p>
     <div>
-        <ul>Mis videos favoritas de Youtube</ul>
+        <ul>Mis videos favoritas de Youtube
             <li><a href="https://youtu.be/1aokooixKIo">Sparks - Coldplay</a></li>
             <li><a href="https://youtu.be/qBoQzo98EpQ">Heart To Heart - Mac DeMarco</a></li>
             <li><a href="https://youtu.be/7XmTuS6krwI">Resonance (Speed Up)</a></li>
+        </ul>    
     </div>
 </body>
 </html>
