--- a/ejercicio1-cursobootcamp.html
+++ b/ejercicio1-cursobootcamp.html
@@ -7,13 +7,15 @@
     <title>Ejercicio de Introducción a HTML en OpenBootcamp</title>
 </head>
 <body>
-    <p>Este es mi primer comentario de dos lineas</p>
-    <p>Aprendiendo a documentar mi codigo con OpenBootcamp</p>
+    <!-- Este es mi primer comentario de dos lineas
+    Aprendiendo a documentar mi codigo con OpenBootcamp-->
     <div>
-        <ul>Mis videos favoritas de Youtube</ul>
+        <h4>Mis videos favoritas de Youtube</h4>
+        <ul>
             <li><a href="https://youtu.be/1aokooixKIo">Sparks - Coldplay</a></li>
             <li><a href="https://youtu.be/qBoQzo98EpQ">Heart To Heart - Mac DeMarco</a></li>
             <li><a href="https://youtu.be/7XmTuS6krwI">Resonance (Speed Up)</a></li>
+        </ul>
     </div>
 </body>
 </html>
